[tool.poetry]
name = "imc"
version = "0.1.0"
description = ""
authors = ["Camargos <camargosjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
